docs: Update points system to show 100 points for all categories

--- a/DOCUMENTATION.html
+++ b/DOCUMENTATION.html
@@ -763,6 +763,11 @@
                 </div>
 
                 <h3 class="h5 mt-4">Points System</h3>
+                <div class="alert alert-success">
+                    <i class="bi bi-star-fill me-2"></i>
+                    <strong>Unified Points:</strong> All achievements are worth <strong>100 points</strong> regardless
+                    of category.
+                </div>
                 <div class="row">
                     <div class="col-md-6">
                         <table class="table table-sm table-striped">
@@ -775,27 +780,27 @@
                             <tbody>
                                 <tr>
                                     <td>🔬 Scientific Research</td>
-                                    <td><span class="badge bg-primary">100</span></td>
+                                    <td><span class="badge bg-success">100</span></td>
                                 </tr>
                                 <tr>
                                     <td>🚀 Entrepreneurship</td>
-                                    <td><span class="badge bg-primary">100</span></td>
+                                    <td><span class="badge bg-success">100</span></td>
                                 </tr>
                                 <tr>
                                     <td>💻 Hackathons</td>
-                                    <td><span class="badge bg-info">95</span></td>
+                                    <td><span class="badge bg-success">100</span></td>
                                 </tr>
                                 <tr>
                                     <td>🏆 Competition</td>
-                                    <td><span class="badge bg-info">90</span></td>
+                                    <td><span class="badge bg-success">100</span></td>
                                 </tr>
                                 <tr>
                                     <td>🌍 Global Exchange</td>
-                                    <td><span class="badge bg-info">90</span></td>
+                                    <td><span class="badge bg-success">100</span></td>
                                 </tr>
                                 <tr>
                                     <td>⭐ Awards</td>
-                                    <td><span class="badge bg-secondary">85</span></td>
+                                    <td><span class="badge bg-success">100</span></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -811,27 +816,27 @@
                             <tbody>
                                 <tr>
                                     <td>🎨 Artistic</td>
-                                    <td><span class="badge bg-secondary">80</span></td>
+                                    <td><span class="badge bg-success">100</span></td>
                                 </tr>
                                 <tr>
                                     <td>⚽ Sports</td>
-                                    <td><span class="badge bg-secondary">75</span></td>
+                                    <td><span class="badge bg-success">100</span></td>
                                 </tr>
                                 <tr>
                                     <td>💼 Internships</td>
-                                    <td><span class="badge bg-secondary">70</span></td>
+                                    <td><span class="badge bg-success">100</span></td>
                                 </tr>
                                 <tr>
                                     <td>🤝 Volunteering</td>
-                                    <td><span class="badge bg-secondary">65</span></td>
+                                    <td><span class="badge bg-success">100</span></td>
                                 </tr>
                                 <tr>
                                     <td>📚 Special Training</td>
-                                    <td><span class="badge bg-secondary">60</span></td>
+                                    <td><span class="badge bg-success">100</span></td>
                                 </tr>
                                 <tr>
                                     <td>✨ Other</td>
-                                    <td><span class="badge bg-secondary">50</span></td>
+                                    <td><span class="badge bg-success">100</span></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -1022,8 +1027,8 @@
                             </button>
                         </h2>
                         <div id="faq3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-                            <div class="accordion-body">Submit achievements in high-value categories (Scientific
-                                Research, Entrepreneurship, Hackathons = 100 points each).</div>
+                            <div class="accordion-body">All achievements earn <strong>100 points</strong> regardless of
+                                category. Simply submit your achievements with proper evidence to earn points!</div>
                         </div>
                     </div>
                 </div>
